--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello from 106</h1>
+    <main>
+        <section id="list">A</section>
 
+        <section id="form">
+            <div class="mb-3">
+                <label class="form-label" for="txtTitle">Title</label>
+                <input type="text" class="form-control" id="txtTitle">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="txtDescription">Description</label>
+                <textarea rows="3" class="form-control" id="txtDescription"></textarea>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="selColor">Color</label>
+                <input type="color" class="form-control" id="selColor">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="selDate">Start Date</label>
+                <input type="datetime-local" class="form-control" id="selDate">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="selStatus">Status</label>
+                <select class="form-control" id="selStatus">
+                    <option value="">-- select one --</option>
+                    <option value="">New</option>
+                    <option value="">In Progress</option>
+                    <option value="">Completed</option>
+                    <option value="">Canceled</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="numBudget">Budget</label>
+                <input type="num" class="form-control" id="numBudget">
+            </div>
+
+            <div>
+                <button class="btn btn-light" id="btnSave">Send</button>
+            </div>
+        </section>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="./scripts/app.js"></script>
 </body>
 </html>
+<!-- this is a comment-->
