--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <section class="list"></section>
+        <section class="list">
+            <h2>FSDI 106 - Task Manager Project</h2>
+        </section>
 
         <section id="form">
             <div class="mb-3">
@@ -45,6 +47,8 @@
 
             <div>
                 <button class="btn btn-light" id="btnSave">Send</button>
+                <button class="btn btn-light" id="btnDeleteAll">Delete All Tasks</button>
+
             </div>
         </section>
     </main>
